# fast-elec-template

./: .gitignore  build.bat
backend/: README.md  pyproject.toml  start.bat  start.sh
backend/src/: main.py
backend/src/fastapi_bed/: app.py
backend/src/fastapi_bed/core/: args.py  config.py  database.py  logger.py
backend/src/fastapi_bed/routers/: __init__.py
backend/src/fastapi_bed/schemas/: message.py
backend/src/fastapi_bed/tools/: common_util.py
electron-fed/: package-lock.json  start_bed.bat  tsconfig.web.json
electron-fed/src/main/: index.ts
electron-fed/src/renderer/src/: main.ts
frontend/electron-fed/: README.md  electron-builder.yml  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json  uno.config.ts
frontend/electron-fed/src/main/: index.ts
frontend/electron-fed/src/renderer/: index.html
frontend/electron-fed/src/renderer/router/: index.ts
frontend/electron-fed/src/renderer/src/: App.vue  main.ts
frontend/electron-fed/src/renderer/src/utils/: axios.ts
frontend/electron-fed/src/renderer/src/views/: About.vue  Home.vue
